--- a/src/Root.css
+++ b/src/Root.css
@@ -13,10 +13,13 @@ a {
   color: var(--link_color);
 }
 p {
-  color: var(--body_color);
+  color: var(--card_color);
 }
 
-
-.viewDetails{
+.viewDetails {
   background-color: var(--card_color);
+}
+
+.testimonial_card{
+  background-color: var(--testimonial_color);
 }
